force-app/main/default/objects/JCRelatedTabsSetting__mdt/JCRelatedTabsSetting__mdt.object-meta.xml
<CustomObject>
    <label>Related Tabs Setting</label>
    <pluralLabel>Related Tabs Settings</pluralLabel>
</CustomObject>