force-app/main/default/objects/JCRelatedTabsSetting__mdt/fields/Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>Filter_Field__c</fullName>
    <label>Filter Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>