force-app/main/default/objects/JCRelatedTabsSetting__mdt/fields/Filter_Values__c.field-meta.xml
<CustomField>
    <fullName>Filter_Values__c</fullName>
    <label>Filter Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>