force-app/main/default/objects/JCRelatedTabsSetting__mdt/fields/Icon_Field__c.field-meta.xml
<CustomField>
    <fullName>Icon_Field__c</fullName>
    <label>Icon Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>