force-app/main/default/objects/JCRelatedTabsSetting__mdt/fields/Label_Field__c.field-meta.xml
<CustomField>
    <fullName>Label_Field__c</fullName>
    <label>Label Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>