force-app/main/default/objects/JCRelatedTabsSetting__mdt/fields/List_Title__c.field-meta.xml
<CustomField>
    <fullName>List_Title__c</fullName>
    <label>List Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>