force-app/main/default/objects/JCRelatedTabsSetting__mdt/fields/Reference_Field__c.field-meta.xml
<CustomField>
    <fullName>Reference_Field__c</fullName>
    <label>Reference Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>