force-app/main/default/objects/JCRelatedTabsSetting__mdt/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <label>Related Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>