force-app/main/default/objects/JCRelatedTabsSetting__mdt/fields/Scrollable__c.field-meta.xml
<CustomField>
    <fullName>Scrollable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Scrollable</label>
    <type>Checkbox</type>
</CustomField>