force-app/main/default/objects/JCRelatedTabsSetting__mdt/fields/Show_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Show_Percentage__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Percentage</label>
    <type>Checkbox</type>
</CustomField>