force-app/main/default/objects/JCRelatedTabsSetting__mdt/fields/Success_Icon__c.field-meta.xml
<CustomField>
    <fullName>Success_Icon__c</fullName>
    <label>Success Icon Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>