force-app/main/default/objects/JCRelatedTabsSetting__mdt/fields/Warning_Icon__c.field-meta.xml
<CustomField>
    <fullName>Warning_Icon__c</fullName>
    <label>Warning Icon Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>